[GUI] Use generic class approach. Enter prog. done
Signed-off-by: Marek Belisko <marek.belisko@gmail.com>

--- a/qui/mainwindow.ui
+++ b/qui/mainwindow.ui
@@ -38,6 +38,29 @@
      <attribute name="title">
       <string>Terminal</string>
      </attribute>
+     <widget class="QTextEdit" name="term_text_edit">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>561</width>
+        <height>191</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>83</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="UploadTab">
      <attribute name="title">
@@ -150,6 +173,19 @@
        </item>
       </layout>
      </widget>
+     <widget class="QPushButton" name="clear_upload_btn">
+      <property name="geometry">
+       <rect>
+        <x>300</x>
+        <y>0</y>
+        <width>83</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
     </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox">
@@ -164,6 +200,32 @@
     <property name="title">
      <string>Module Info</string>
     </property>
+    <widget class="QLabel" name="label_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>71</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Module ID:</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_mod_id">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>20</y>
+       <width>111</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
@@ -242,7 +304,7 @@
      <item>
       <widget class="QLabel" name="label_3">
        <property name="text">
-        <string/>
+        <string>SPI check</string>
        </property>
       </widget>
      </item>
@@ -265,7 +327,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>24</height>
+     <height>25</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
