--- a/qui/mainwindow.ui
+++ b/qui/mainwindow.ui
@@ -64,12 +64,9 @@
     </widget>
     <widget class="QWidget" name="UploadTab">
      <attribute name="title">
-      <string>Upload</string>
+      <string>Programming</string>
      </attribute>
      <widget class="QPlainTextEdit" name="UploadTextEdit">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
       <property name="geometry">
        <rect>
         <x>210</x>
@@ -101,13 +98,26 @@
        <string>Upload Log</string>
       </property>
      </widget>
-     <widget class="QWidget" name="layoutWidget">
+     <widget class="QPushButton" name="clear_upload_btn">
       <property name="geometry">
        <rect>
-        <x>40</x>
-        <y>20</y>
-        <width>119</width>
-        <height>201</height>
+        <x>300</x>
+        <y>0</y>
+        <width>83</width>
+        <height>27</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Clear</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="">
+      <property name="geometry">
+       <rect>
+        <x>21</x>
+        <y>11</y>
+        <width>161</width>
+        <height>221</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout">
@@ -120,26 +130,27 @@
        </item>
        <item>
         <widget class="QPushButton" name="OpenFileButton">
-         <property name="enabled">
-          <bool>false</bool>
-         </property>
          <property name="text">
           <string>Open File</string>
          </property>
         </widget>
        </item>
        <item>
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
+        <widget class="QPushButton" name="CompileButton">
+         <property name="enabled">
+          <bool>false</bool>
          </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
+         <property name="text">
+          <string>Compile</string>
          </property>
-        </spacer>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="file_label">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="ApplicationCheckBox">
@@ -172,19 +183,6 @@
         </widget>
        </item>
       </layout>
-     </widget>
-     <widget class="QPushButton" name="clear_upload_btn">
-      <property name="geometry">
-       <rect>
-        <x>300</x>
-        <y>0</y>
-        <width>83</width>
-        <height>27</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Clear</string>
-      </property>
      </widget>
     </widget>
    </widget>
@@ -302,19 +300,19 @@
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLabel" name="label_3">
-       <property name="text">
-        <string>SPI check</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QCheckBox" name="checkBox">
        <property name="text">
         <string>Check SPI</string>
        </property>
        <property name="checked">
         <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_3">
+       <property name="text">
+        <string>SPI check</string>
        </property>
       </widget>
      </item>
@@ -327,7 +325,7 @@
      <x>0</x>
      <y>0</y>
      <width>600</width>
-     <height>25</height>
+     <height>24</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
