--- a/qui/mainwindow.ui
+++ b/qui/mainwindow.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>600</width>
-    <height>408</height>
+    <width>651</width>
+    <height>442</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>QTLiqrf</string>
+  </property>
+  <property name="layoutDirection">
+   <enum>Qt::LeftToRight</enum>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QTabWidget" name="TabWidget">
@@ -22,8 +25,8 @@
      <rect>
       <x>10</x>
       <y>80</y>
-      <width>581</width>
-      <height>271</height>
+      <width>631</width>
+      <height>301</height>
      </rect>
     </property>
     <property name="sizePolicy">
@@ -77,8 +80,8 @@
        <rect>
         <x>210</x>
         <y>30</y>
-        <width>361</width>
-        <height>211</height>
+        <width>411</width>
+        <height>241</height>
        </rect>
       </property>
       <property name="sizePolicy">
@@ -297,7 +300,7 @@
     <property name="geometry">
      <rect>
       <x>420</x>
-      <y>355</y>
+      <y>390</y>
       <width>95</width>
       <height>16</height>
      </rect>
@@ -319,7 +322,7 @@
     <property name="geometry">
      <rect>
       <x>11</x>
-      <y>350</y>
+      <y>385</y>
       <width>406</width>
       <height>27</height>
      </rect>
@@ -350,7 +353,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>600</width>
+     <width>651</width>
      <height>24</height>
     </rect>
    </property>
